fixed css and truncate long urls in trail page.

--- a/plugins/Trails/Trails.css
+++ b/plugins/Trails/Trails.css
@@ -317,6 +317,7 @@ div#trail-close:hover
   color: #f63b01;
   text-decoration: none;
   border: none;
+  float: left;
 }
 
 .TrailPageZoomBorder
